@@ -1,34 +1,51 @@
 package com.teamchallenge.easybuy.service.goods;
 
 import com.teamchallenge.easybuy.dto.goods.GoodsDTO;
+import com.teamchallenge.easybuy.domain.model.user.Manager;
+import com.teamchallenge.easybuy.domain.model.user.Role;
+import com.teamchallenge.easybuy.domain.model.user.User;
 import com.teamchallenge.easybuy.exception.goods.GoodsNotFoundException;
 import com.teamchallenge.easybuy.mapper.goods.GoodsMapper;
 import com.teamchallenge.easybuy.domain.model.goods.Goods;
 import com.teamchallenge.easybuy.domain.model.goods.category.Category;
 import com.teamchallenge.easybuy.repository.goods.GoodsRepository;
 import com.teamchallenge.easybuy.repository.goods.GoodsSpecifications;
+import com.teamchallenge.easybuy.repository.shop.ShopRepository;
+import com.teamchallenge.easybuy.repository.user.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class GoodsService {
 
     private final GoodsRepository goodsRepository;
     private final GoodsMapper goodsMapper;
+    private final ShopRepository shopRepository;
+    private final UserRepository userRepository;
 
     @Autowired
-    public GoodsService(GoodsRepository goodsRepository, GoodsMapper goodsMapper) {
+    public GoodsService(
+            GoodsRepository goodsRepository,
+            GoodsMapper goodsMapper,
+            ShopRepository shopRepository,
+            UserRepository userRepository
+    ) {
         this.goodsRepository = goodsRepository;
         this.goodsMapper = goodsMapper;
+        this.shopRepository = shopRepository;
+        this.userRepository = userRepository;
     }
 
     @Transactional(readOnly = true)
@@ -36,7 +53,7 @@ public class GoodsService {
     public List<GoodsDTO> getAllGoods() {
         return goodsRepository.findAll().stream()
                 .map(goodsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -50,6 +67,8 @@ public class GoodsService {
     @Transactional
     @CacheEvict(value = "goods", allEntries = true)
     public GoodsDTO createGoods(GoodsDTO goodsDTO) {
+        requireCanManageShop(goodsDTO.getShopId());
+
         if (goodsRepository.existsByArt(goodsDTO.getArt())) {
             throw new IllegalArgumentException("Goods with art " + goodsDTO.getArt() + " already exists");
         }
@@ -62,6 +81,18 @@ public class GoodsService {
     public GoodsDTO updateGoods(UUID id, GoodsDTO goodsDTO) {
         Goods existingGoods = goodsRepository.findById(id)
                 .orElseThrow(() -> new GoodsNotFoundException(id));
+
+        UUID existingShopId = existingGoods.getShop() != null ? existingGoods.getShop().getShopId() : null;
+        requireCanManageShop(existingShopId);
+
+        // Non-admin users cannot move goods between shops.
+        if (goodsDTO.getShopId() != null && !goodsDTO.getShopId().equals(existingShopId)) {
+            User currentUser = getCurrentUserOrThrow();
+            if (currentUser.getRole() != Role.ADMIN) {
+                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You cannot move goods to another shop");
+            }
+        }
+
         if (!existingGoods.getArt().equals(goodsDTO.getArt()) && goodsRepository.existsByArt(goodsDTO.getArt())) {
             throw new IllegalArgumentException("Goods with art " + goodsDTO.getArt() + " already exists");
         }
@@ -75,7 +106,55 @@ public class GoodsService {
     public void deleteGoods(UUID id) {
         Goods goods = goodsRepository.findById(id)
                 .orElseThrow(() -> new GoodsNotFoundException(id));
+
+        UUID shopId = goods.getShop() != null ? goods.getShop().getShopId() : null;
+        requireCanManageShop(shopId);
+
         goodsRepository.deleteById(id);
+    }
+
+    private void requireCanManageShop(UUID shopId) {
+        if (shopId == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Shop ID is required");
+        }
+
+        User currentUser = getCurrentUserOrThrow();
+        Role role = currentUser.getRole();
+
+        if (role == Role.ADMIN) {
+            return;
+        }
+
+        if (role == Role.SELLER) {
+            boolean ownsShop = shopRepository.existsByShopIdAndSeller_Id(shopId, currentUser.getId());
+            if (!ownsShop) {
+                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Seller can manage only own shop goods");
+            }
+            return;
+        }
+
+        if (role == Role.MANAGER) {
+            if (!(currentUser instanceof Manager manager) || manager.getShop() == null || manager.getShop().getShopId() == null) {
+                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Manager is not assigned to a shop");
+            }
+
+            if (!shopId.equals(manager.getShop().getShopId())) {
+                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Manager can manage goods only in assigned shop");
+            }
+            return;
+        }
+
+        throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Insufficient permissions to manage goods");
+    }
+
+    private User getCurrentUserOrThrow() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication is required");
+        }
+
+        return userRepository.findByEmail(authentication.getName())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Current user is not found"));
     }
 
     @Transactional(readOnly = true)
@@ -96,6 +175,6 @@ public class GoodsService {
                 .and(GoodsSpecifications.hasRating(rating));
         return goodsRepository.findAll(spec).stream()
                 .map(goodsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
